# a-share-agent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pricing.json  pyproject.toml
.github/: copilot-instructions.md
routines/: README.md
routines/trace_failure_triage/: experience.md  prompt.md  runbook.md
scripts/: check_user_snippet_compat.py  open_trace.py  run_user_db_check_in_sandbox.py  scan_trace_failures_smoke.py  start-server.ps1
skills/adj_prices_and_returns/: experience.md
skills/backtest_bollinger/: experience.md
skills/backtest_chandelier_exit/: experience.md
skills/backtest_ma_crossover/: experience.md
skills/backtest_macd/: experience.md
skills/backtest_momentum_rotation/: experience.md
skills/etf_data/: experience.md
skills/etf_nav_and_premium/: experience.md
skills/finance_statements_metrics/: experience.md
skills/index_returns_and_compare/: experience.md
skills/merge_prices_and_valuation/: experience.md
skills/momentum_breakout/: experience.md
skills/multi_stock_compare/: experience.md
skills/pandas_trade_date/: experience.md
skills/parallel_multi_stock/: experience.md
skills/plotting_charts/: experience.md
skills/risk_metrics/: experience.md
skills/robust_df_checks/: experience.md
skills/rolling_indicators/: experience.md
skills/statistical_analysis/: experience.md
skills/time_series_forecast/: experience.md
skills/trading_day_windows/: experience.md
skills/valuation_units/: experience.md
src/agent/: __init__.py  backtest.py  batch_tools.py  figures.py  graph.py  memory.py  memory_middleware.py  profile_tools.py  prompts.py  python_guard_middleware.py  sandbox.py  skill_injection_middleware.py  skills.py  (+8 more)
strategies/: README.md
tests/: conftest.py  test_agent_tool_conversation.py  test_batch_tools.py  test_config_injection.py  test_memory_middleware.py  test_user_profile.py  test_vision_smoke.py
(+28 files in other folders)
