[project]
name = "a-share-agent"
version = "0.1.0"
description = "A-Share financial analysis agent powered by LangGraph and DeepSeek"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "langchain-deepseek>=0.1.0",
    "langchain-core>=1.0.0",
    "langchain>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "stock-data",
    "spiderman",
    "scipy>=1.17.0",
    "langchain-tavily>=0.1.0",
    "statsmodels>=0.14.0",
    "arch>=7.0.0",
    "mem0ai>=0.1.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.uv]
dev-dependencies = [
    "langgraph-cli[inmem]>=0.4.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
stock-data = { path = "../stock_data", editable = true }
spiderman = { path = "../spiderman", editable = true }
